--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,13 +28,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="8"
+        android:layout_weight="10"
         android:orientation="vertical"
         android:gravity="bottom"
         android:layout_gravity="bottom">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:orientation="horizontal"
             android:gravity="bottom">
             <Button
@@ -75,6 +76,31 @@
                 android:layout_gravity="center"
                 android:onClick="Seguir"
                 android:text="OFF seguir"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:gravity="bottom">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/colorPrimaryDark"
+                android:textColor="#fff"
+                android:layout_gravity="center"
+                android:onClick="mifusedlocation"
+                android:text="Fused location"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/colorAccent"
+                android:textColor="#fff"
+                android:layout_gravity="center"
+                android:onClick="migoogleapiclient"
+                android:text="Google api client"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
